@@ -73,23 +73,17 @@ public class UriComponentEncodeTest extends TestCase {
     }
     
     public void testEncodeQuery() {
-        assertEquals("a+b+c.-*_=+",
-                UriComponent.encode("a b c.-*_=+", UriComponent.Type.QUERY));
-        assertEquals("a+b+c.-*_%3D%2B",
-                UriComponent.encode("a b c.-*_=+", UriComponent.Type.QUERY_PARAM));
+        assertEquals("a+b+c.-*_=+&%25xx%2520",
+                UriComponent.encode("a b c.-*_=+&%xx%20", UriComponent.Type.QUERY));
+        assertEquals("a+b+c.-*_%3D%2B%26%25xx%2520",
+                UriComponent.encode("a b c.-*_=+&%xx%20", UriComponent.Type.QUERY_PARAM));
     }
     
     public void testContextualEncodeQuery() {
-        assertEquals("a+b+c.-*_=+",
-                UriComponent.contextualEncode("a b c.-*_=+", UriComponent.Type.QUERY));
-        System.out.println(UriComponent.contextualEncode("a b c.-*_=+", UriComponent.Type.QUERY_PARAM));
-        assertEquals("a+b+c.-*_%3D+",
-                UriComponent.contextualEncode("a b c.-*_=+", UriComponent.Type.QUERY_PARAM));
-    }
-
-    public void testContextualEncodeQueryParam() {
-        assertEquals("a%3Db+c",
-                UriComponent.contextualEncode("a=b c", UriComponent.Type.QUERY_PARAM));
+        assertEquals("a+b+c.-*_=+&%25xx%20",
+                UriComponent.contextualEncode("a b c.-*_=+&%xx%20", UriComponent.Type.QUERY));
+        assertEquals("a+b+c.-*_%3D+%26%25xx%20",
+                UriComponent.contextualEncode("a b c.-*_=+&%xx%20", UriComponent.Type.QUERY_PARAM));
     }
 
     public void testContextualEncodeMatrixParam() {
